<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="title">My Nanodegree App</string>
    <string name="s1">SPOTIFY STREAMER</string>
    <string name="s2">SCORES APP</string>
    <string name="s3">LIBRARY APP</string>
    <string name="s4">BUILD IT BEGGER</string>
    <string name="s5">XYZ READER</string>
    <string name="s6">CAPSTONE: MY OWN APP</string>

    <string name="action_settings">Settings</string>
</resources>
