<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MyAppPortfolio">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="800dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/title"
            android:text="@string/title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="30sp"
            android:typeface="serif"
            android:layout_alignParentTop="true"
            android:layout_marginTop="30dp"/>

        <Button
            android:id="@+id/button_1"
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/s1"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:typeface="serif"
            android:layout_alignParentTop="true"
            android:layout_marginTop="30dp"
            />

        <Button
            android:id="@+id/button_2"
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/s2"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:typeface="serif" />

        <Button
            android:id="@+id/button_3"
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/s3"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:typeface="serif" />

        <Button
            android:id="@+id/button_4"
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/s4"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:typeface="serif" />

        <Button
            android:id="@+id/button_5"
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/s5"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:typeface="serif" />

        <Button
            android:id="@+id/button_6"
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/s6"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:typeface="serif" />

    </LinearLayout>

</RelativeLayout>
